--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,13 @@
 @import "bower_components/bootstrap/scss/bootstrap.scss";
 // endbower
 
+
+// Imports
+@import 'base';
+
+
+
+
 .browserupgrade {
   margin: 0.2em 0;
   background: #ccc;
