comments out bootstrap after build

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,7 +4,8 @@
  *
  *
  * // bower:scss
-  // endbower
+ @import "bower_components/bootstrap/scss/bootstrap.scss";
+ // endbower
  */
 
 // Base Imports
