adds vanilla scss modular scale package

--- a/app/styles/base/_fonts.mixins.scss
+++ b/app/styles/base/_fonts.mixins.scss
@@ -1,3 +1,5 @@
+@import 'modularscale';
+
 @mixin make-font($font-weight: normal, $font-style: normal){
   font-family: $font-family;
   font-weight: $font-weight;
