--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -1,10 +1,11 @@
 *{
   box-sizing: border-box;
+  @include font(1);
   &::after,
   &::before{
     box-sizing: border-box;
+    font-size: inherit;
   }
-  @include font(1);
 }
 
 html{
@@ -13,13 +14,13 @@ html{
   @include make-font;
 }
 h1{
-  @include font-b(5);
+  @include font-xl(5);
 }
 h2{
   @include font(4)
 }
 h3{
-  @include font-sb(3);
+  @include font-l(3);
   text-transform: uppercase;
 }
 h4{
