--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,5 +1,9 @@
 $font-family: 'Source Sans Pro';
 
+// Grid
+// set this to false if using bootstrap
+$enable-standalone-grid: true !default;
+
 $modularscale: (
   base: 1rem,
   ratio: 1.4
