--- a/app/styles/grid/_grid.scss
+++ b/app/styles/grid/_grid.scss
@@ -2,7 +2,7 @@
 //
 // Set the container width, and override it for fixed navbars in media queries.
 
-@if $enable-grid-classes {
+@if $enable-standalone-grid {
   .container {
     @include make-container();
     @include make-container-max-widths();
@@ -14,7 +14,7 @@
 // Utilizes the mixin meant for fixed width containers, but without any defined
 // width for fluid, full width layouts.
 
-@if $enable-grid-classes {
+@if $enable-standalone-grid {
   .container-fluid {
     @include make-container();
   }
@@ -24,7 +24,7 @@
 //
 // Rows contain and clear the floats of your columns.
 
-@if $enable-grid-classes {
+@if $enable-standalone-grid {
   .row {
     @include make-row();
   }
@@ -47,6 +47,6 @@
 //
 // Common styles for small and large grid columns
 
-@if $enable-grid-classes {
+@if $enable-standalone-grid {
   @include make-grid-columns();
 }
