adds animate.css library

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -4,6 +4,8 @@ $font-family: 'Source Sans Pro';
 // set this to false if using bootstrap
 $enable-standalone-grid: true !default;
 
+
+// Fonts
 $modularscale: (
   base: 1rem,
   ratio: 1.4
