adds icons and icon BEM classes to boilerplate template

--- a/app/styles/base/_base.mixins.scss
+++ b/app/styles/base/_base.mixins.scss
@@ -8,3 +8,14 @@
   clip: rect(0, 0, 0, 0);
   position: absolute;
 }
+
+@mixin breakpoint($name, $breakpoints: $grid-breakpoints) {
+  $min: breakpoint-min($name, $breakpoints);
+  @if $min {
+    @media (min-width: $min) {
+      @content;
+    }
+  } @else {
+    @content;
+  }
+}
