--- a/app/styles/components/_icons.mixins.scss
+++ b/app/styles/components/_icons.mixins.scss
@@ -11,3 +11,8 @@
         }
     }
 }
+
+@mixin make-icon($size: 20px, $additional: 0){
+    height: $size + $additional;
+    width: $size + $additional;
+}
