fixes root directory of images

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -11,7 +11,7 @@ $modularscale: (
 );
 
 // Images
-$image-path: '../img' !default;
+$image-path: 'images/' !default;
 $fallback-extension: 'png' !default;
 $retina-suffix: '@2x';
 
